--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+    implementation 'com.github.AtifSayings:Animatoo:1.0.1'
 
 
 }
