--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+        jcenter()
     }
 }
 
@@ -20,6 +22,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        jcenter()
         flatDir {
             dirs "${project(':unityLibrary').projectDir}/libs"
         }
