--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.github.AtifSayings:Animatoo:1.0.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 
 }
