fixed the bug of details page where users could not go back to previous page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name="com.unity3d.player.UnityPlayerActivity"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
