--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,7 @@ project(':unityLibrary').projectDir=new File('..\\AndroidBuild\\unityLibrary')
 
 
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+//    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
