--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ android {
 
 
 dependencies {
-
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
     implementation 'com.github.AtifSayings:Animatoo:1.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'nl.joery.animatedbottombar:library:1.1.0'
 
 
 
