--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.ARFurniture"
         tools:targetApi="31">
         <activity
+            android:name=".OpenUnityActivity"
+            android:exported="false" />
+        <activity
             android:name=".FavoritesActivity"
             android:exported="false" />
         <activity
@@ -50,8 +53,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
     </application>
 
 </manifest>
